--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Darren Cocjin</h1>
-    <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t39.30808-6/223357645_859827868273632_781184406280270805_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFoDt34YmTZ9519WFY9AJcYTIbWbvFCA45MhtZu8UIDjmPYSYOTQ8jwWvBkJSC-jx8AjHnQLN3fLE9ZG0KO85NV&_nc_ohc=Nh_RQVSiE7cAX_H-cTs&_nc_ht=scontent.fmnl17-1.fna&oh=00_AfCe8EIpS9Xhj9bLceWfLIQhEa74LObW_VGvRD13y64OuA&oe=660249E5" height="200"/>
+    <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t39.30808-6/223357645_859827868273632_781184406280270805_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFoDt34YmTZ9519WFY9AJcYTIbWbvFCA45MhtZu8UIDjmPYSYOTQ8jwWvBkJSC-jx8AjHnQLN3fLE9ZG0KO85NV&_nc_ohc=Nh_RQVSiE7cAX_H-cTs&_nc_ht=scontent.fmnl17-1.fna&oh=00_AfCe8EIpS9Xhj9bLceWfLIQhEa74LObW_VGvRD13y64OuA&oe=660249E5" alt="Dars Picture" height="200"/>
     
     <p>My main objective was to be a great asset to my community.
         I'm great with data analyzation, also automating my task and I can do Customer Service Representative tasks.
